# span-mt-metaeval

./: .gitignore  README.md  pyproject.toml
scripts/: analyze_annotations.py  compute_wmt_ranking.py  evaluate.py  generate_plots.py  meta_evaluate.py  meta_evaluate_scores.py  plot_progressive_span_length.py  visualize_annotations.py
src/mt_evaluation/: README.md  __init__.py
src/mt_evaluation/autoevals/: __init__.py  autoeval.py  factory.py  gemba_mqm.py  utils.py
src/mt_evaluation/autoevals/unified/: base.py  simple.py  simplest.py  unified_mqm_boosted_doc_context.py  unified_mqm_boosted_v5.py  unified_mqm_critical.py
src/mt_evaluation/config/: __init__.py  metrics.yaml  model_aliases.yaml
src/mt_evaluation/core/: __init__.py  constants.py  datastructures.py  model_io.py  scoring.py  types.py
src/mt_evaluation/data/: __init__.py  cache.py  language_codes.py  raw_json_utils.py  utils.py  wmt_loaders.py
src/mt_evaluation/meta_evaluation/: __init__.py  metrics_to_evaluate.py  utils.py
src/mt_evaluation/meta_evaluation/span_level/: __init__.py  matching.py  metrics.py  perturbations.py  preprocessing.py  standardization.py  utils.py
src/mt_evaluation/models/: __init__.py  base.py  factory.py
src/mt_evaluation/models/bedrock/: __init__.py  base.py  claude.py  gpt_oss.py  llama.py  nova.py  qwen.py  utils.py
src/mt_evaluation/models/huggingface/: gemma3.py  llama3.py  qwen3.py
src/mt_evaluation/utils/: __init__.py  naming.py  string.py
tests/: test_optimal_matching.py  test_overlapping_spans.py  test_per_metric_optimal_matching.py  test_smoke.py  test_word_perturbations.py
